<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="427dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="50dp"
        android:gravity="center">

        <Button
            android:id="@+id/BtnMenuToBattle"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/battle" />

        <Button
            android:id="@+id/BtnMenuToHoH"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/hall_of_heroes" />

        <Button
            android:id="@+id/BtnMenuToHelp"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/help" />

        <Button
            android:id="@+id/BtnMenuToSettings"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/settings" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>